{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 194,
  "lineage": "0a472d01-3ecc-327b-e397-c61aca422c3b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:657458109624:instance/i-0d74db8a37d260251",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d74db8a37d260251",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Linux-Day-3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074f8c81aae0c1553",
            "private_dns": "ip-10-0-11-136.eu-west-2.compute.internal",
            "private_ip": "10.0.11.136",
            "public_ip": "18.130.165.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0429690797b1578df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-064f7865bca4aa29e",
            "tags": {
              "Name": "ansible_controller"
            },
            "tags_all": {
              "Name": "ansible_controller"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fba6e897cbfbb0bb"
            ]
          },
          "dependencies": [
            "aws_db_instance.estio_db",
            "aws_security_group.estio_ec2_sg",
            "aws_subnet.estio_public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "estio_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:657458109624:route-table/rtb-0a796557e5c8d25a7",
            "id": "rtb-0a796557e5c8d25a7",
            "owner_id": "657458109624",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-estio-rt"
            },
            "tags_all": {
              "Name": "private-estio-rt"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-03292a9bec24f4e1d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "estio_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:657458109624:route-table/rtb-04e6432e9ca77dc52",
            "id": "rtb-04e6432e9ca77dc52",
            "owner_id": "657458109624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02465d3eda84fd4ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-estio-rt"
            },
            "tags_all": {
              "Name": "public-estio-rt"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-03292a9bec24f4e1d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "estio_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d09139c9ddc69ddb",
            "route_table_id": "rtb-0a796557e5c8d25a7",
            "subnet_id": "subnet-06585374542dc948f"
          },
          "dependencies": [
            "aws_route_table.estio_private_rt",
            "aws_subnet.estio_private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "estio_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6338925de9243a6",
            "route_table_id": "rtb-0a796557e5c8d25a7",
            "subnet_id": "subnet-0c716b5410b4b8b42"
          },
          "dependencies": [
            "aws_route_table.estio_private_rt",
            "aws_subnet.estio_private_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "estio_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0410186ff6c9da776",
            "route_table_id": "rtb-04e6432e9ca77dc52",
            "subnet_id": "subnet-064f7865bca4aa29e"
          },
          "dependencies": [
            "aws_subnet.estio_public_1",
            "aws_route_table.estio_public_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "estio_db_sg_from_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:657458109624:security-group/sg-0be7bd4bc01959d74",
            "description": "Allow 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be7bd4bc01959d74",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fba6e897cbfbb0bb"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "estio-db-sg-tf",
            "name_prefix": "",
            "owner_id": "657458109624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "estio_db_sg_from_ec2_sg"
            },
            "tags_all": {
              "Name": "estio_db_sg_from_ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03292a9bec24f4e1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.estio_ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "estio_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:657458109624:security-group/sg-0fba6e897cbfbb0bb",
            "description": "Allow http and https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fba6e897cbfbb0bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "httpx from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "estio_ec2_sg-tf",
            "name_prefix": "",
            "owner_id": "657458109624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "estio_ec2_sg"
            },
            "tags_all": {
              "Name": "estio_ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03292a9bec24f4e1d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "estio_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:657458109624:subnet/subnet-06585374542dc948f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06585374542dc948f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657458109624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "estio-tf-private-1"
            },
            "tags_all": {
              "Name": "estio-tf-private-1"
            },
            "vpc_id": "vpc-03292a9bec24f4e1d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "estio_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:657458109624:subnet/subnet-0c716b5410b4b8b42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c716b5410b4b8b42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657458109624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "estio-tf-private-2"
            },
            "tags_all": {
              "Name": "estio-tf-private-2"
            },
            "vpc_id": "vpc-03292a9bec24f4e1d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "estio_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:657458109624:subnet/subnet-064f7865bca4aa29e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064f7865bca4aa29e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "657458109624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "estio-tf-public-1"
            },
            "tags_all": {
              "Name": "estio-tf-public-1"
            },
            "vpc_id": "vpc-03292a9bec24f4e1d"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "estio_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:657458109624:vpc/vpc-03292a9bec24f4e1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4b3cb8dc9f6c642",
            "default_route_table_id": "rtb-04e6432e9ca77dc52",
            "default_security_group_id": "sg-0e02f7faec5995b64",
            "dhcp_options_id": "dopt-cefbeea6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03292a9bec24f4e1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e6432e9ca77dc52",
            "owner_id": "657458109624",
            "tags": {
              "Name": "estio-vpc"
            },
            "tags_all": {
              "Name": "estio-vpc"
            }
          }
        }
      ]
    }
  ]
}